kubernetes-microservices-mystyle-project-2-with-kops/kubedefs/memcache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpromc
  template:
    metadata:
      labels:
        app: vpromc
    spec:
      containers:
        - name: memcached
          image: memcached
          ports:
            - name: vpromc-port
              containerPort: 11211
