kubernetes-microservices-mystyle-project-2-with-kops/kubedefs/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  selector:
    app: vprodb
  ports:
    - name: vprodb-port
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
