kubernetes-microservices-mystyle-project-2-with-kops/kubedefs/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: techdecipher.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vproapp-service
                port:
                  number: 8080
